<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <RelativeLayout
                android:id="@+id/profileLayout"
                android:layout_height="150dp"
                android:layout_width="150dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:layout_centerHorizontal="true">
                <ImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"

                    android:background="@drawable/bg_rounded_image"
                    android:src="@drawable/defaultprofile"
                    android:padding="30dp"/>

                <ImageButton
                    android:id="@+id/add_image_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/bg_rounded_plusbtn"
                    android:foreground="?attr/selectableItemBackground"
                    android:src="@drawable/ic_baseline_add_24" />
            </RelativeLayout>

            <EditText
                android:id="@+id/acc_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profileLayout"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_rounded_edittext"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="textCapWords"
                android:padding="15dp" />
            <EditText
                android:id="@+id/acc_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapWords"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/acc_lastname"
                android:background="@drawable/bg_rounded_edittext"
                android:padding="15dp"
                android:hint="@string/firstname" />

            <EditText
                android:id="@+id/acc_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/acc_firstname"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_rounded_edittext"
                android:focusable="false"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp" />

            <EditText
                android:id="@+id/acc_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/acc_email"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_rounded_edittext"
                android:padding="15dp"
                android:hint="@string/address" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:gravity="center"
                android:layout_below="@id/acc_address">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onLogout"
                    android:text="Kijelenztkezés"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/redDark"
                    android:onClick="onDeleteAccount"
                    android:text="Fiók törlése"/>


            </LinearLayout>


        </RelativeLayout>

    </ScrollView>



</FrameLayout>