<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp">

            <TextView
                android:id="@+id/summaryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="Rendelés összesítése"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/list_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/summaryTextView"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:stretchColumns="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="116dp">

                    <TextView
                        android:text="Étel"
                        android:textStyle="bold" />

                    <TextView
                        android:gravity="right"
                        android:text="Ár"
                        android:textStyle="bold" />
                </TableRow>

                <View
                    android:id="@+id/sumHR"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/list_table" />
            </TableLayout>

            <TextView
                android:id="@+id/orderdatastv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/list_table"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="Rendelési adatok:"
                android:textSize="20dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/orderdatastv"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/summ_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/bg_rounded_edittext"
                    android:ems="10"
                    android:hint="@string/lastname"
                    android:inputType="textCapWords"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/summ_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/summ_lastname"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/bg_rounded_edittext"
                    android:ems="10"
                    android:hint="@string/firstname"
                    android:inputType="textCapWords"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/summ_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/summ_firstname"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/bg_rounded_edittext"
                    android:focusable="false"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/summ_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/summ_email"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/bg_rounded_edittext"
                    android:hint="@string/address"
                    android:padding="10dp" />

                <CheckBox
                    android:id="@+id/save_form_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/summ_address"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="5dp"
                    android:text="Űrlap mentése" />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>




    <Button
        android:id="@+id/summ_orderbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Megrendlés"
        android:onClick="order"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>